--- a/admin/escrow.html
+++ b/admin/escrow.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>エスクロー残高 | KAIMAX Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,12 +22,44 @@
       }
     }
   </script>
+  <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
+    .safe-top { padding-top: max(0px, var(--sat)); }
+    .sidebar {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+      transform: translateX(0);
+    }
+    .sidebar-overlay {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s, visibility 0.3s;
+    }
+    .sidebar-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .touch-target { min-height: 44px; min-width: 44px; }
+    @media (min-width: 1024px) {
+      .sidebar {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-100 text-navy-800 antialiased">
+  <!-- Sidebar Overlay -->
+  <div id="sidebar-overlay" class="sidebar-overlay fixed inset-0 bg-black/50 z-40 lg:hidden"></div>
+
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-navy-900 flex-shrink-0">
-      <div class="p-6">
+    <aside id="sidebar" class="sidebar fixed lg:static inset-y-0 left-0 w-64 bg-navy-900 flex-shrink-0 z-50 overflow-y-auto safe-top">
+      <div class="p-4 lg:p-6 flex items-center justify-between">
         <a href="../public/top.html" class="flex items-center gap-3">
           <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
             <span class="font-display text-navy-900 text-xl font-bold">K</span>
@@ -37,6 +69,11 @@
             <span class="text-xs text-gold-400">Admin</span>
           </div>
         </a>
+        <button id="sidebar-close" class="lg:hidden w-10 h-10 flex items-center justify-center text-cream-100 hover:text-gold-400 transition-colors touch-target" aria-label="メニューを閉じる">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
       </div>
       <nav class="px-4 py-6 space-y-1">
         <a href="dashboard.html" class="flex items-center gap-3 px-4 py-3 rounded-xl text-cream-200 hover:bg-white/5">
@@ -100,9 +137,16 @@
 
     <!-- Main Content -->
     <div class="flex-1 flex flex-col">
-      <header class="bg-white border-b border-gray-200 px-8 py-4">
+      <header class="bg-white border-b border-gray-200 px-4 lg:px-8 py-4 safe-top">
         <div class="flex items-center justify-between">
-          <h1 class="text-xl font-bold text-navy-800">エスクロー残高</h1>
+          <div class="flex items-center gap-4">
+            <button id="sidebar-toggle" class="lg:hidden w-10 h-10 flex items-center justify-center text-navy-600 hover:text-gold-600 transition-colors touch-target" aria-label="メニューを開く">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
+            <h1 class="text-lg lg:text-xl font-bold text-navy-800">エスクロー残高</h1>
+          </div>
           <div class="flex items-center gap-4">
             <div class="w-10 h-10 rounded-full bg-navy-800 flex items-center justify-center">
               <span class="text-gold-400 font-semibold">管</span>
@@ -111,33 +155,33 @@
         </div>
       </header>
 
-      <main class="flex-1 p-8 overflow-auto">
+      <main class="flex-1 p-4 lg:p-8 overflow-auto">
         <!-- Summary Cards -->
-        <div class="grid grid-cols-4 gap-6 mb-8">
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6 mb-6 lg:mb-8">
           <div class="bg-gradient-to-br from-gold-400 to-gold-600 rounded-2xl p-6 text-navy-900">
             <div class="text-sm opacity-80 mb-1">総エスクロー残高</div>
-            <div class="text-3xl font-bold">¥28.5M</div>
+            <div class="text-xl sm:text-3xl font-bold">¥28.5M</div>
             <div class="text-sm opacity-80 mt-2">68件の取引</div>
           </div>
           <div class="bg-white rounded-2xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-1">支払い済み（保留中）</div>
-            <div class="text-2xl font-bold text-blue-600">¥18.2M</div>
+            <div class="text-lg sm:text-2xl font-bold text-blue-600">¥18.2M</div>
             <div class="text-sm text-navy-400 mt-2">発送待ち: 23件</div>
           </div>
           <div class="bg-white rounded-2xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-1">発送済み（確認待ち）</div>
-            <div class="text-2xl font-bold text-yellow-600">¥8.5M</div>
+            <div class="text-lg sm:text-2xl font-bold text-yellow-600">¥8.5M</div>
             <div class="text-sm text-navy-400 mt-2">受取確認待ち: 12件</div>
           </div>
           <div class="bg-white rounded-2xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-1">紛争中</div>
-            <div class="text-2xl font-bold text-red-600">¥1.8M</div>
+            <div class="text-lg sm:text-2xl font-bold text-red-600">¥1.8M</div>
             <div class="text-sm text-navy-400 mt-2">2件</div>
           </div>
         </div>
 
         <!-- Flow Diagram -->
-        <div class="bg-white rounded-2xl p-6 shadow-sm mb-8">
+        <div class="bg-white rounded-2xl p-6 shadow-sm mb-6 lg:mb-8">
           <h2 class="font-bold text-navy-800 mb-6">エスクローフロー</h2>
           <div class="flex items-center justify-between">
             <div class="flex-1 text-center">
@@ -175,85 +219,85 @@
         </div>
 
         <!-- Pending Escrow List -->
-        <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden overflow-x-auto">
           <div class="px-6 py-4 border-b border-gray-100">
             <h2 class="font-bold text-navy-800">保留中のエスクロー</h2>
           </div>
           <table class="w-full">
             <thead class="bg-gray-50">
               <tr>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">取引ID</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">商品</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">売主</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">買主</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">金額</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">ステータス</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">入金日</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">操作</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">取引ID</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">商品</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">売主</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">買主</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">金額</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">ステータス</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">入金日</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">操作</th>
               </tr>
             </thead>
             <tbody class="divide-y divide-gray-100">
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001846</span></td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001846</span></td>
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">ロレックス デイトナ</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">佐藤 花子</td>
                 <td class="px-6 py-4 text-sm text-navy-600">大黒屋 新宿店</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥3,850,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">発送待ち</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">発送待ち</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/15</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001850</span></td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001850</span></td>
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">エルメス ケリー28</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">田中 一郎</td>
                 <td class="px-6 py-4 text-sm text-navy-600">鈴木質店</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥2,450,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">受取確認待ち</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">受取確認待ち</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/13</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50 bg-red-50">
-                <td class="px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001843</span></td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001843</span></td>
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">カルティエ ラブブレス</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">伊藤 健太</td>
                 <td class="px-6 py-4 text-sm text-navy-600">松坂屋質店</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥520,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800">紛争中</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800">紛争中</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/10</td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <a href="disputes.html" class="text-red-600 hover:text-red-700 text-sm font-medium">紛争対応</a>
                 </td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001851</span></td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001851</span></td>
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">シャネル J12</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">高橋 次郎</td>
                 <td class="px-6 py-4 text-sm text-navy-600">銀座質屋</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥980,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">発送待ち</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">発送待ち</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/14</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001852</span></td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4"><span class="font-mono text-sm text-navy-600">#TXN-2024-001852</span></td>
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">ヴァンクリーフ アルハンブラ</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">渡辺 真理</td>
                 <td class="px-6 py-4 text-sm text-navy-600">質セキネ</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥650,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">受取確認待ち</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">受取確認待ち</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/12</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
             </tbody>
           </table>
@@ -271,5 +315,39 @@
       </main>
     </div>
   </div>
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebar-overlay');
+    const sidebarToggle = document.getElementById('sidebar-toggle');
+    const sidebarClose = document.getElementById('sidebar-close');
+
+    function openSidebar() {
+      sidebar.classList.add('active');
+      sidebarOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('active');
+      sidebarOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    sidebarToggle.addEventListener('click', openSidebar);
+    sidebarClose.addEventListener('click', closeSidebar);
+    sidebarOverlay.addEventListener('click', closeSidebar);
+
+    sidebar.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth < 1024) {
+          closeSidebar();
+        }
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeSidebar();
+    });
+  </script>
 </body>
 </html>
