--- a/admin/reports-payments.html
+++ b/admin/reports-payments.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>決済レポート | KAIMAX Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,12 +22,44 @@
       }
     }
   </script>
+  <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
+    .safe-top { padding-top: max(0px, var(--sat)); }
+    .sidebar {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+      transform: translateX(0);
+    }
+    .sidebar-overlay {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s, visibility 0.3s;
+    }
+    .sidebar-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .touch-target { min-height: 44px; min-width: 44px; }
+    @media (min-width: 1024px) {
+      .sidebar {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-100 text-navy-800 antialiased">
+  <!-- Sidebar Overlay -->
+  <div id="sidebar-overlay" class="sidebar-overlay fixed inset-0 bg-black/50 z-40 lg:hidden"></div>
+
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-navy-900 flex-shrink-0">
-      <div class="p-6">
+    <aside id="sidebar" class="sidebar fixed lg:static inset-y-0 left-0 w-64 bg-navy-900 flex-shrink-0 z-50 overflow-y-auto safe-top">
+      <div class="p-4 lg:p-6 flex items-center justify-between">
         <a href="../public/top.html" class="flex items-center gap-3">
           <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
             <span class="font-display text-navy-900 text-xl font-bold">K</span>
@@ -37,6 +69,11 @@
             <span class="text-xs text-gold-400">Admin</span>
           </div>
         </a>
+        <button id="sidebar-close" class="lg:hidden w-10 h-10 flex items-center justify-center text-cream-100 hover:text-gold-400 transition-colors touch-target" aria-label="メニューを閉じる">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
       </div>
       <nav class="px-4 py-6 space-y-1">
         <a href="dashboard.html" class="flex items-center gap-3 px-4 py-3 rounded-xl text-cream-200 hover:bg-white/5">
@@ -59,13 +96,18 @@
 
     <!-- Main Content -->
     <div class="flex-1 flex flex-col">
-      <header class="bg-white border-b border-gray-200 px-8 py-4">
+      <header class="bg-white border-b border-gray-200 px-4 lg:px-8 py-4 safe-top">
         <div class="flex items-center justify-between">
           <div class="flex items-center gap-4">
+            <button id="sidebar-toggle" class="lg:hidden w-10 h-10 flex items-center justify-center text-navy-600 hover:text-gold-600 transition-colors touch-target" aria-label="メニューを開く">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
             <a href="reports.html" class="text-navy-500 hover:text-navy-700">
               <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
             </a>
-            <h1 class="text-xl font-bold text-navy-800">決済レポート</h1>
+            <h1 class="text-lg lg:text-xl font-bold text-navy-800">決済レポート</h1>
           </div>
           <div class="flex items-center gap-4">
             <button class="px-4 py-2 border border-gray-200 text-navy-600 rounded-xl text-sm font-medium hover:bg-gray-50 flex items-center gap-2">
@@ -76,7 +118,7 @@
         </div>
       </header>
 
-      <main class="flex-1 p-8 overflow-auto">
+      <main class="flex-1 p-4 lg:p-8 overflow-auto">
         <!-- Report Navigation -->
         <div class="bg-white rounded-2xl shadow-sm mb-6">
           <div class="flex border-b border-gray-100">
@@ -111,35 +153,35 @@
         </div>
 
         <!-- Summary Stats -->
-        <div class="grid grid-cols-5 gap-4 mb-6">
+        <div class="grid grid-cols-2 lg:grid-cols-5 gap-4 mb-6">
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-2">総入金額</div>
-            <div class="text-2xl font-bold text-green-600">¥162.5M</div>
+            <div class="text-lg sm:text-2xl font-bold text-green-600">¥162.5M</div>
             <div class="text-xs text-navy-400 mt-1">1,892件</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-2">総出金額</div>
-            <div class="text-2xl font-bold text-blue-600">¥148.2M</div>
+            <div class="text-lg sm:text-2xl font-bold text-blue-600">¥148.2M</div>
             <div class="text-xs text-navy-400 mt-1">1,756件</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-2">手数料収入</div>
-            <div class="text-2xl font-bold text-gold-600">¥4.7M</div>
+            <div class="text-lg sm:text-2xl font-bold text-gold-600">¥4.7M</div>
             <div class="text-xs text-navy-400 mt-1">2.9%</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-2">エスクロー残高</div>
-            <div class="text-2xl font-bold text-navy-800">¥12.4M</div>
+            <div class="text-lg sm:text-2xl font-bold text-navy-800">¥12.4M</div>
             <div class="text-xs text-navy-400 mt-1">42件保留中</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <div class="text-sm text-navy-500 mb-2">決済手数料</div>
-            <div class="text-2xl font-bold text-red-500">-¥1.8M</div>
+            <div class="text-lg sm:text-2xl font-bold text-red-500">-¥1.8M</div>
             <div class="text-xs text-navy-400 mt-1">決済代行費用</div>
           </div>
         </div>
 
-        <div class="grid grid-cols-2 gap-6 mb-6">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-6 mb-6">
           <!-- Payment Methods -->
           <div class="bg-white rounded-2xl p-6 shadow-sm">
             <h3 class="font-bold text-navy-800 mb-6">決済方法別内訳</h3>
@@ -251,29 +293,29 @@
             <h3 class="font-bold text-navy-800">手数料内訳</h3>
           </div>
           <div class="p-6">
-            <div class="grid grid-cols-4 gap-6">
+            <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6">
               <div class="text-center p-4 bg-cream-50 rounded-xl">
                 <div class="text-sm text-navy-500 mb-2">消費者手数料（3%）</div>
-                <div class="text-2xl font-bold text-gold-600">¥2,104,500</div>
+                <div class="text-lg sm:text-2xl font-bold text-gold-600">¥2,104,500</div>
               </div>
               <div class="text-center p-4 bg-cream-50 rounded-xl">
                 <div class="text-sm text-navy-500 mb-2">質屋手数料（5%）</div>
-                <div class="text-2xl font-bold text-gold-600">¥2,595,500</div>
+                <div class="text-lg sm:text-2xl font-bold text-gold-600">¥2,595,500</div>
               </div>
               <div class="text-center p-4 bg-red-50 rounded-xl">
                 <div class="text-sm text-navy-500 mb-2">決済代行費用</div>
-                <div class="text-2xl font-bold text-red-500">-¥1,825,000</div>
+                <div class="text-lg sm:text-2xl font-bold text-red-500">-¥1,825,000</div>
               </div>
               <div class="text-center p-4 bg-green-50 rounded-xl">
                 <div class="text-sm text-navy-500 mb-2">純収益</div>
-                <div class="text-2xl font-bold text-green-600">¥2,875,000</div>
+                <div class="text-lg sm:text-2xl font-bold text-green-600">¥2,875,000</div>
               </div>
             </div>
           </div>
         </div>
 
         <!-- Recent Transactions -->
-        <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden overflow-x-auto">
           <div class="p-6 border-b border-gray-100 flex items-center justify-between">
             <h3 class="font-bold text-navy-800">最近の決済</h3>
             <a href="deposits.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">すべて見る</a>
@@ -281,60 +323,60 @@
           <table class="w-full">
             <thead class="bg-gray-50">
               <tr>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">決済ID</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">種別</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">ユーザー</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">金額</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">方法</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">ステータス</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-3">日時</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">決済ID</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">種別</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">ユーザー</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">金額</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">方法</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">ステータス</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-3">日時</th>
               </tr>
             </thead>
             <tbody class="divide-y divide-gray-50">
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4 text-sm font-mono text-navy-600">#PAY-28901</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">入金</span></td>
-                <td class="px-6 py-4 text-sm text-navy-800">山田 太郎</td>
-                <td class="px-6 py-4 text-sm font-semibold text-green-600">+¥92,000</td>
-                <td class="px-6 py-4 text-sm text-navy-600">クレジットカード</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
-                <td class="px-6 py-4 text-sm text-navy-500">2024/01/15 14:30</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-mono text-navy-600">#PAY-28901</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">入金</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-800">山田 太郎</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-semibold text-green-600">+¥92,000</td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-600">クレジットカード</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-500">2024/01/15 14:30</td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4 text-sm font-mono text-navy-600">#PAY-28900</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">出金</span></td>
-                <td class="px-6 py-4 text-sm text-navy-800">田中質店</td>
-                <td class="px-6 py-4 text-sm font-semibold text-blue-600">-¥87,400</td>
-                <td class="px-6 py-4 text-sm text-navy-600">銀行振込</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
-                <td class="px-6 py-4 text-sm text-navy-500">2024/01/15 12:00</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-mono text-navy-600">#PAY-28900</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">出金</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-800">田中質店</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-semibold text-blue-600">-¥87,400</td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-600">銀行振込</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-500">2024/01/15 12:00</td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4 text-sm font-mono text-navy-600">#PAY-28899</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">入金</span></td>
-                <td class="px-6 py-4 text-sm text-navy-800">佐藤 花子</td>
-                <td class="px-6 py-4 text-sm font-semibold text-green-600">+¥185,000</td>
-                <td class="px-6 py-4 text-sm text-navy-600">銀行振込</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">確認中</span></td>
-                <td class="px-6 py-4 text-sm text-navy-500">2024/01/15 10:45</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-mono text-navy-600">#PAY-28899</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">入金</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-800">佐藤 花子</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-semibold text-green-600">+¥185,000</td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-600">銀行振込</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">確認中</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-500">2024/01/15 10:45</td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4 text-sm font-mono text-navy-600">#PAY-28898</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">出金</span></td>
-                <td class="px-6 py-4 text-sm text-navy-800">佐藤質舗</td>
-                <td class="px-6 py-4 text-sm font-semibold text-blue-600">-¥245,000</td>
-                <td class="px-6 py-4 text-sm text-navy-600">銀行振込</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
-                <td class="px-6 py-4 text-sm text-navy-500">2024/01/15 09:30</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-mono text-navy-600">#PAY-28898</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">出金</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-800">佐藤質舗</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-semibold text-blue-600">-¥245,000</td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-600">銀行振込</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-500">2024/01/15 09:30</td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4 text-sm font-mono text-navy-600">#PAY-28897</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">入金</span></td>
-                <td class="px-6 py-4 text-sm text-navy-800">鈴木 一郎</td>
-                <td class="px-6 py-4 text-sm font-semibold text-green-600">+¥58,000</td>
-                <td class="px-6 py-4 text-sm text-navy-600">コンビニ決済</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
-                <td class="px-6 py-4 text-sm text-navy-500">2024/01/14 18:20</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-mono text-navy-600">#PAY-28897</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">入金</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-800">鈴木 一郎</td>
+                <td class="px-3 sm:px-6 py-4 text-sm font-semibold text-green-600">+¥58,000</td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-600">コンビニ決済</td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
+                <td class="px-3 sm:px-6 py-4 text-sm text-navy-500">2024/01/14 18:20</td>
               </tr>
             </tbody>
           </table>
@@ -342,5 +384,39 @@
       </main>
     </div>
   </div>
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebar-overlay');
+    const sidebarToggle = document.getElementById('sidebar-toggle');
+    const sidebarClose = document.getElementById('sidebar-close');
+
+    function openSidebar() {
+      sidebar.classList.add('active');
+      sidebarOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('active');
+      sidebarOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    sidebarToggle.addEventListener('click', openSidebar);
+    sidebarClose.addEventListener('click', closeSidebar);
+    sidebarOverlay.addEventListener('click', closeSidebar);
+
+    sidebar.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth < 1024) {
+          closeSidebar();
+        }
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeSidebar();
+    });
+  </script>
 </body>
 </html>
