--- a/admin/reports-sales.html
+++ b/admin/reports-sales.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>売上レポート | KAIMAX Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -23,12 +23,44 @@
       }
     }
   </script>
+  <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
+    .safe-top { padding-top: max(0px, var(--sat)); }
+    .sidebar {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+      transform: translateX(0);
+    }
+    .sidebar-overlay {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s, visibility 0.3s;
+    }
+    .sidebar-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .touch-target { min-height: 44px; min-width: 44px; }
+    @media (min-width: 1024px) {
+      .sidebar {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-100 text-navy-800 antialiased">
+  <!-- Sidebar Overlay -->
+  <div id="sidebar-overlay" class="sidebar-overlay fixed inset-0 bg-black/50 z-40 lg:hidden"></div>
+
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-navy-900 flex-shrink-0">
-      <div class="p-6">
+    <aside id="sidebar" class="sidebar fixed lg:static inset-y-0 left-0 w-64 bg-navy-900 flex-shrink-0 z-50 overflow-y-auto safe-top">
+      <div class="p-4 lg:p-6 flex items-center justify-between">
         <a href="../public/top.html" class="flex items-center gap-3">
           <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
             <span class="font-display text-navy-900 text-xl font-bold">K</span>
@@ -38,6 +70,11 @@
             <span class="text-xs text-gold-400">Admin</span>
           </div>
         </a>
+        <button id="sidebar-close" class="lg:hidden w-10 h-10 flex items-center justify-center text-cream-100 hover:text-gold-400 transition-colors touch-target" aria-label="メニューを閉じる">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
       </div>
       <nav class="px-4 py-6 space-y-1">
         <a href="dashboard.html" class="flex items-center gap-3 px-4 py-3 rounded-xl text-cream-200 hover:bg-white/5">
@@ -60,13 +97,18 @@
 
     <!-- Main Content -->
     <div class="flex-1 flex flex-col">
-      <header class="bg-white border-b border-gray-200 px-8 py-4">
+      <header class="bg-white border-b border-gray-200 px-4 lg:px-8 py-4 safe-top">
         <div class="flex items-center justify-between">
           <div class="flex items-center gap-4">
+            <button id="sidebar-toggle" class="lg:hidden w-10 h-10 flex items-center justify-center text-navy-600 hover:text-gold-600 transition-colors touch-target" aria-label="メニューを開く">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
             <a href="reports.html" class="text-navy-500 hover:text-navy-700">
               <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
             </a>
-            <h1 class="text-xl font-bold text-navy-800">売上レポート</h1>
+            <h1 class="text-lg lg:text-xl font-bold text-navy-800">売上レポート</h1>
           </div>
           <div class="flex items-center gap-4">
             <button class="px-4 py-2 border border-gray-200 text-navy-600 rounded-xl text-sm font-medium hover:bg-gray-50 flex items-center gap-2">
@@ -81,7 +123,7 @@
         </div>
       </header>
 
-      <main class="flex-1 p-8 overflow-auto">
+      <main class="flex-1 p-4 lg:p-8 overflow-auto">
         <!-- Report Navigation -->
         <div class="bg-white rounded-2xl shadow-sm mb-6">
           <div class="flex border-b border-gray-100">
@@ -122,13 +164,13 @@
         </div>
 
         <!-- Summary Stats -->
-        <div class="grid grid-cols-4 gap-4 mb-6">
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
           <div class="bg-white rounded-xl p-6 shadow-sm">
             <div class="flex items-center justify-between mb-2">
               <span class="text-sm text-navy-500">総取引高</span>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-0.5 rounded-full">+18%</span>
             </div>
-            <div class="text-3xl font-bold text-navy-800">¥156.8M</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">¥156.8M</div>
             <div class="text-xs text-navy-400 mt-1">前月比 +¥23.5M</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
@@ -136,7 +178,7 @@
               <span class="text-sm text-navy-500">手数料収入</span>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-0.5 rounded-full">+22%</span>
             </div>
-            <div class="text-3xl font-bold text-gold-600">¥4.7M</div>
+            <div class="text-xl sm:text-3xl font-bold text-gold-600">¥4.7M</div>
             <div class="text-xs text-navy-400 mt-1">前月比 +¥0.85M</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
@@ -144,7 +186,7 @@
               <span class="text-sm text-navy-500">取引件数</span>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-0.5 rounded-full">+15%</span>
             </div>
-            <div class="text-3xl font-bold text-navy-800">1,847</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">1,847</div>
             <div class="text-xs text-navy-400 mt-1">前月比 +245件</div>
           </div>
           <div class="bg-white rounded-xl p-6 shadow-sm">
@@ -152,14 +194,14 @@
               <span class="text-sm text-navy-500">平均取引額</span>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-0.5 rounded-full">+3%</span>
             </div>
-            <div class="text-3xl font-bold text-navy-800">¥84,900</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">¥84,900</div>
             <div class="text-xs text-navy-400 mt-1">前月比 +¥2,400</div>
           </div>
         </div>
 
-        <div class="grid grid-cols-3 gap-6 mb-6">
+        <div class="grid grid-cols-1 lg:grid-cols-3 gap-4 lg:gap-6 mb-6">
           <!-- Sales Chart -->
-          <div class="col-span-2 bg-white rounded-2xl p-6 shadow-sm">
+          <div class="lg:col-span-2 bg-white rounded-2xl p-6 shadow-sm">
             <div class="flex items-center justify-between mb-6">
               <h3 class="font-bold text-navy-800">売上推移</h3>
               <div class="flex items-center gap-2">
@@ -227,7 +269,7 @@
         </div>
 
         <!-- Top Performers -->
-        <div class="grid grid-cols-2 gap-6">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-6">
           <!-- Top Pawnshops -->
           <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
             <div class="p-6 border-b border-gray-100">
@@ -449,6 +491,40 @@
           }
         }
       }
+    });
+  </script>
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebar-overlay');
+    const sidebarToggle = document.getElementById('sidebar-toggle');
+    const sidebarClose = document.getElementById('sidebar-close');
+
+    function openSidebar() {
+      sidebar.classList.add('active');
+      sidebarOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('active');
+      sidebarOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    sidebarToggle.addEventListener('click', openSidebar);
+    sidebarClose.addEventListener('click', closeSidebar);
+    sidebarOverlay.addEventListener('click', closeSidebar);
+
+    sidebar.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth < 1024) {
+          closeSidebar();
+        }
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeSidebar();
     });
   </script>
 </body>
