--- a/auth/register.html
+++ b/auth/register.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>会員登録 | KAIMAX</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,18 +39,25 @@
     }
   </script>
   <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
     .hero-gradient {
       background: linear-gradient(135deg, #0A0F1C 0%, #0F172A 50%, #1E293B 100%);
     }
     .noise-overlay {
       background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noise'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noise)' opacity='0.03'/%3E%3C/svg%3E");
     }
+    .safe-top { padding-top: max(1rem, var(--sat)); }
+    .safe-bottom { padding-bottom: max(1rem, var(--sab)); }
+    input, button, select { min-height: 44px; }
   </style>
 </head>
 <body class="font-sans bg-cream-50 text-navy-800 antialiased">
   <div class="min-h-screen">
     <!-- Header -->
-    <header class="p-6 flex items-center justify-between border-b border-gray-100 bg-white">
+    <header class="p-4 sm:p-6 safe-top flex items-center justify-between border-b border-gray-100 bg-white">
       <a href="../public/top.html" class="flex items-center gap-2">
         <div class="w-8 h-8 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
           <span class="font-display text-navy-900 text-lg font-bold">K</span>
@@ -60,7 +67,7 @@
       <a href="login.html" class="text-gold-600 hover:text-gold-700 font-medium text-sm">既にアカウントをお持ちの方</a>
     </header>
 
-    <div class="max-w-2xl mx-auto px-6 py-12">
+    <div class="max-w-2xl mx-auto px-4 sm:px-6 py-8 sm:py-12">
       <!-- Progress Steps -->
       <div class="mb-12">
         <div class="flex items-center justify-between relative">
@@ -265,7 +272,7 @@
     </div>
 
     <!-- Footer -->
-    <div class="p-6 border-t border-gray-100 text-center text-sm text-navy-500 bg-white">
+    <div class="p-4 sm:p-6 safe-bottom border-t border-gray-100 text-center text-sm text-navy-500 bg-white">
       <a href="#" class="hover:text-navy-700">利用規約</a>
       <span class="mx-2">・</span>
       <a href="#" class="hover:text-navy-700">プライバシーポリシー</a>
