--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>管理ダッシュボード | KAIMAX Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,12 +38,44 @@
       }
     }
   </script>
+  <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
+    .safe-top { padding-top: max(0px, var(--sat)); }
+    .sidebar {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+      transform: translateX(0);
+    }
+    .sidebar-overlay {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s, visibility 0.3s;
+    }
+    .sidebar-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .touch-target { min-height: 44px; min-width: 44px; }
+    @media (min-width: 1024px) {
+      .sidebar {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-100 text-navy-800 antialiased">
+  <!-- Sidebar Overlay -->
+  <div id="sidebar-overlay" class="sidebar-overlay fixed inset-0 bg-black/50 z-40 lg:hidden"></div>
+
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-navy-900 flex-shrink-0">
-      <div class="p-6">
+    <aside id="sidebar" class="sidebar fixed lg:static inset-y-0 left-0 w-64 bg-navy-900 flex-shrink-0 z-50 overflow-y-auto safe-top">
+      <div class="p-4 lg:p-6 flex items-center justify-between">
         <a href="../public/top.html" class="flex items-center gap-3">
           <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
             <span class="font-display text-navy-900 text-xl font-bold">K</span>
@@ -53,6 +85,11 @@
             <span class="text-xs text-gold-400">Admin</span>
           </div>
         </a>
+        <button id="sidebar-close" class="lg:hidden w-10 h-10 flex items-center justify-center text-cream-100 hover:text-gold-400 transition-colors touch-target" aria-label="メニューを閉じる">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
       </div>
 
       <nav class="px-4 py-6 space-y-1">
@@ -144,10 +181,17 @@
     <!-- Main Content -->
     <div class="flex-1 flex flex-col">
       <!-- Header -->
-      <header class="bg-white border-b border-gray-200 px-8 py-4">
+      <header class="bg-white border-b border-gray-200 px-4 lg:px-8 py-4 safe-top">
         <div class="flex items-center justify-between">
-          <h1 class="text-xl font-bold text-navy-800">ダッシュボード</h1>
           <div class="flex items-center gap-4">
+            <button id="sidebar-toggle" class="lg:hidden w-10 h-10 flex items-center justify-center text-navy-600 hover:text-gold-600 transition-colors touch-target" aria-label="メニューを開く">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
+            <h1 class="text-lg lg:text-xl font-bold text-navy-800">ダッシュボード</h1>
+          </div>
+          <div class="flex items-center gap-2 lg:gap-4">
             <button class="w-10 h-10 rounded-full bg-gray-100 flex items-center justify-center hover:bg-gray-200 transition-colors relative">
               <svg class="w-5 h-5 text-navy-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
@@ -158,16 +202,16 @@
               <div class="w-10 h-10 rounded-full bg-navy-800 flex items-center justify-center">
                 <span class="text-gold-400 font-semibold">管</span>
               </div>
-              <span class="text-navy-700 font-medium">管理者</span>
+              <span class="text-navy-700 font-medium hidden sm:block">管理者</span>
             </div>
           </div>
         </div>
       </header>
 
       <!-- Dashboard Content -->
-      <main class="flex-1 p-8 overflow-auto">
+      <main class="flex-1 p-4 lg:p-8 overflow-auto">
         <!-- Stats Cards -->
-        <div class="grid grid-cols-4 gap-6 mb-8">
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 lg:gap-6 mb-6 lg:mb-8">
           <div class="bg-white rounded-2xl p-6 shadow-sm">
             <div class="flex items-center justify-between mb-4">
               <div class="w-12 h-12 bg-blue-100 rounded-xl flex items-center justify-center">
@@ -177,7 +221,7 @@
               </div>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-1 rounded-full">+12%</span>
             </div>
-            <div class="text-3xl font-bold text-navy-800">2,847</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">2,847</div>
             <div class="text-sm text-navy-500 mt-1">登録消費者</div>
           </div>
 
@@ -190,7 +234,7 @@
               </div>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-1 rounded-full">+8%</span>
             </div>
-            <div class="text-3xl font-bold text-navy-800">523</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">523</div>
             <div class="text-sm text-navy-500 mt-1">登録質屋</div>
           </div>
 
@@ -203,7 +247,7 @@
               </div>
               <span class="text-xs text-green-600 bg-green-100 px-2 py-1 rounded-full">+23%</span>
             </div>
-            <div class="text-3xl font-bold text-navy-800">¥48.5M</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">¥48.5M</div>
             <div class="text-sm text-navy-500 mt-1">今月の成約金額</div>
           </div>
 
@@ -215,13 +259,13 @@
                 </svg>
               </div>
             </div>
-            <div class="text-3xl font-bold text-navy-800">¥3.88M</div>
+            <div class="text-xl sm:text-3xl font-bold text-navy-800">¥3.88M</div>
             <div class="text-sm text-navy-500 mt-1">今月の手数料収入</div>
           </div>
         </div>
 
         <!-- Alert & Action Required -->
-        <div class="grid grid-cols-2 gap-6 mb-8">
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-6 mb-6 lg:mb-8">
           <div class="bg-red-50 border border-red-200 rounded-2xl p-6">
             <div class="flex items-center gap-4 mb-4">
               <div class="w-12 h-12 bg-red-100 rounded-xl flex items-center justify-center">
@@ -271,9 +315,9 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 xl:grid-cols-3 gap-6 lg:gap-8">
           <!-- Recent Transactions -->
-          <div class="col-span-2 bg-white rounded-2xl p-6 shadow-sm">
+          <div class="xl:col-span-2 bg-white rounded-2xl p-4 lg:p-6 shadow-sm">
             <div class="flex items-center justify-between mb-6">
               <h2 class="text-lg font-bold text-navy-800">最近の取引</h2>
               <a href="transactions.html" class="text-gold-600 text-sm hover:text-gold-700">すべて見る</a>
@@ -353,7 +397,7 @@
                 </div>
                 <span class="text-sm text-cream-200">エスクロー残高</span>
               </div>
-              <div class="text-3xl font-bold text-gold-400 mb-2">¥12,450,000</div>
+              <div class="text-xl sm:text-3xl font-bold text-gold-400 mb-2">¥12,450,000</div>
               <div class="text-sm text-cream-300">保留中の取引: 42件</div>
             </div>
 
@@ -424,5 +468,40 @@
       </main>
     </div>
   </div>
+
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebar-overlay');
+    const sidebarToggle = document.getElementById('sidebar-toggle');
+    const sidebarClose = document.getElementById('sidebar-close');
+
+    function openSidebar() {
+      sidebar.classList.add('active');
+      sidebarOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('active');
+      sidebarOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    sidebarToggle.addEventListener('click', openSidebar);
+    sidebarClose.addEventListener('click', closeSidebar);
+    sidebarOverlay.addEventListener('click', closeSidebar);
+
+    sidebar.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth < 1024) {
+          closeSidebar();
+        }
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeSidebar();
+    });
+  </script>
 </body>
 </html>
