--- a/admin/pawnshop-review.html
+++ b/admin/pawnshop-review.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>質屋審査 | KAIMAX Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,12 +22,44 @@
       }
     }
   </script>
+  <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
+    .safe-top { padding-top: max(0px, var(--sat)); }
+    .sidebar {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+      transform: translateX(0);
+    }
+    .sidebar-overlay {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s, visibility 0.3s;
+    }
+    .sidebar-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .touch-target { min-height: 44px; min-width: 44px; }
+    @media (min-width: 1024px) {
+      .sidebar {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-100 text-navy-800 antialiased">
+  <!-- Sidebar Overlay -->
+  <div id="sidebar-overlay" class="sidebar-overlay fixed inset-0 bg-black/50 z-40 lg:hidden"></div>
+
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-navy-900 flex-shrink-0">
-      <div class="p-6">
+    <aside id="sidebar" class="sidebar fixed lg:static inset-y-0 left-0 w-64 bg-navy-900 flex-shrink-0 z-50 overflow-y-auto safe-top">
+      <div class="p-4 lg:p-6 flex items-center justify-between">
         <a href="../public/top.html" class="flex items-center gap-3">
           <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
             <span class="font-display text-navy-900 text-xl font-bold">K</span>
@@ -37,6 +69,11 @@
             <span class="text-xs text-gold-400">Admin</span>
           </div>
         </a>
+        <button id="sidebar-close" class="lg:hidden w-10 h-10 flex items-center justify-center text-cream-100 hover:text-gold-400 transition-colors touch-target" aria-label="メニューを閉じる">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+          </svg>
+        </button>
       </div>
       <nav class="px-4 py-6 space-y-1">
         <a href="dashboard.html" class="flex items-center gap-3 px-4 py-3 rounded-xl text-cream-200 hover:bg-white/5">
@@ -100,9 +137,16 @@
 
     <!-- Main Content -->
     <div class="flex-1 flex flex-col">
-      <header class="bg-white border-b border-gray-200 px-8 py-4">
+      <header class="bg-white border-b border-gray-200 px-4 lg:px-8 py-4 safe-top">
         <div class="flex items-center justify-between">
-          <h1 class="text-xl font-bold text-navy-800">質屋審査</h1>
+          <div class="flex items-center gap-4">
+            <button id="sidebar-toggle" class="lg:hidden w-10 h-10 flex items-center justify-center text-navy-600 hover:text-gold-600 transition-colors touch-target" aria-label="メニューを開く">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
+            <h1 class="text-lg lg:text-xl font-bold text-navy-800">質屋審査</h1>
+          </div>
           <div class="flex items-center gap-4">
             <div class="w-10 h-10 rounded-full bg-navy-800 flex items-center justify-center">
               <span class="text-gold-400 font-semibold">管</span>
@@ -111,23 +155,23 @@
         </div>
       </header>
 
-      <main class="flex-1 p-8 overflow-auto">
+      <main class="flex-1 p-4 lg:p-8 overflow-auto">
         <!-- Stats -->
-        <div class="grid grid-cols-4 gap-4 mb-6">
+        <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 mb-6">
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-yellow-600">5</div>
+            <div class="text-lg sm:text-2xl font-bold text-yellow-600">5</div>
             <div class="text-sm text-navy-500">審査待ち</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-green-600">148</div>
+            <div class="text-lg sm:text-2xl font-bold text-green-600">148</div>
             <div class="text-sm text-navy-500">承認済み</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-red-600">3</div>
+            <div class="text-lg sm:text-2xl font-bold text-red-600">3</div>
             <div class="text-sm text-navy-500">却下</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-navy-800">2.4日</div>
+            <div class="text-lg sm:text-2xl font-bold text-navy-800">2.4日</div>
             <div class="text-sm text-navy-500">平均審査日数</div>
           </div>
         </div>
@@ -155,7 +199,7 @@
                 </span>
               </div>
 
-              <div class="grid grid-cols-3 gap-6 mb-4">
+              <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 lg:gap-6 mb-4">
                 <div>
                   <div class="text-xs text-navy-500 mb-1">代表者名</div>
                   <div class="text-sm font-medium text-navy-800">松田 雄一</div>
@@ -216,7 +260,7 @@
                 </span>
               </div>
 
-              <div class="grid grid-cols-3 gap-6 mb-4">
+              <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 lg:gap-6 mb-4">
                 <div>
                   <div class="text-xs text-navy-500 mb-1">代表者名</div>
                   <div class="text-sm font-medium text-navy-800">佐藤 美咲</div>
@@ -277,7 +321,7 @@
                 </span>
               </div>
 
-              <div class="grid grid-cols-3 gap-6 mb-4">
+              <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 lg:gap-6 mb-4">
                 <div>
                   <div class="text-xs text-navy-500 mb-1">代表者名</div>
                   <div class="text-sm font-medium text-navy-800">山本 健一</div>
@@ -370,5 +414,39 @@
       </main>
     </div>
   </div>
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebar-overlay');
+    const sidebarToggle = document.getElementById('sidebar-toggle');
+    const sidebarClose = document.getElementById('sidebar-close');
+
+    function openSidebar() {
+      sidebar.classList.add('active');
+      sidebarOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('active');
+      sidebarOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    sidebarToggle.addEventListener('click', openSidebar);
+    sidebarClose.addEventListener('click', closeSidebar);
+    sidebarOverlay.addEventListener('click', closeSidebar);
+
+    sidebar.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth < 1024) {
+          closeSidebar();
+        }
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeSidebar();
+    });
+  </script>
 </body>
 </html>
