--- a/admin/transactions.html
+++ b/admin/transactions.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>取引一覧 | KAIMAX Admin</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,21 +22,60 @@
       }
     }
   </script>
+  <style>
+    :root {
+      --sat: env(safe-area-inset-top);
+      --sab: env(safe-area-inset-bottom);
+    }
+    .safe-top { padding-top: max(0px, var(--sat)); }
+    .sidebar {
+      transform: translateX(-100%);
+      transition: transform 0.3s ease-in-out;
+    }
+    .sidebar.active {
+      transform: translateX(0);
+    }
+    .sidebar-overlay {
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.3s, visibility 0.3s;
+    }
+    .sidebar-overlay.active {
+      opacity: 1;
+      visibility: visible;
+    }
+    .touch-target { min-height: 44px; min-width: 44px; }
+    @media (min-width: 1024px) {
+      .sidebar {
+        transform: translateX(0);
+      }
+    }
+  </style>
 </head>
 <body class="font-sans bg-gray-100 text-navy-800 antialiased">
+  <!-- Sidebar Overlay -->
+  <div id="sidebar-overlay" class="sidebar-overlay fixed inset-0 bg-black/50 z-40 lg:hidden"></div>
+
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-64 bg-navy-900 flex-shrink-0">
+    <aside id="sidebar" class="sidebar fixed lg:static inset-y-0 left-0 w-64 bg-navy-900 flex-shrink-0 z-50 overflow-y-auto safe-top">
       <div class="p-6">
-        <a href="../public/top.html" class="flex items-center gap-3">
-          <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
-            <span class="font-display text-navy-900 text-xl font-bold">K</span>
-          </div>
-          <div>
-            <span class="font-display text-xl text-white tracking-wide block">KAIMAX</span>
-            <span class="text-xs text-gold-400">Admin</span>
-          </div>
-        </a>
+        <div class="flex items-center justify-between">
+          <a href="../public/top.html" class="flex items-center gap-3">
+            <div class="w-10 h-10 bg-gradient-to-br from-gold-400 to-gold-600 rounded-lg flex items-center justify-center">
+              <span class="font-display text-navy-900 text-xl font-bold">K</span>
+            </div>
+            <div>
+              <span class="font-display text-xl text-white tracking-wide block">KAIMAX</span>
+              <span class="text-xs text-gold-400">Admin</span>
+            </div>
+          </a>
+          <button id="sidebar-close" class="lg:hidden w-10 h-10 flex items-center justify-center text-cream-100 hover:text-gold-400 transition-colors touch-target" aria-label="メニューを閉じる">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+            </svg>
+          </button>
+        </div>
       </div>
       <nav class="px-4 py-6 space-y-1">
         <a href="dashboard.html" class="flex items-center gap-3 px-4 py-3 rounded-xl text-cream-200 hover:bg-white/5">
@@ -100,11 +139,18 @@
 
     <!-- Main Content -->
     <div class="flex-1 flex flex-col">
-      <header class="bg-white border-b border-gray-200 px-8 py-4">
+      <header class="bg-white border-b border-gray-200 px-4 lg:px-8 py-4">
         <div class="flex items-center justify-between">
-          <h1 class="text-xl font-bold text-navy-800">取引一覧</h1>
-          <div class="flex items-center gap-4">
-            <button class="px-4 py-2 bg-gray-100 text-navy-600 rounded-xl text-sm font-medium hover:bg-gray-200">CSVエクスポート</button>
+          <div class="flex items-center gap-2 lg:gap-4">
+            <button id="sidebar-toggle" class="lg:hidden w-10 h-10 flex items-center justify-center text-navy-600 hover:text-gold-600 transition-colors touch-target" aria-label="メニューを開く">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
+            <h1 class="text-lg lg:text-xl font-bold text-navy-800">取引一覧</h1>
+          </div>
+          <div class="flex items-center gap-2 lg:gap-4">
+            <button class="px-3 lg:px-4 py-2 bg-gray-100 text-navy-600 rounded-xl text-xs lg:text-sm font-medium hover:bg-gray-200 hidden sm:block">CSVエクスポート</button>
             <div class="w-10 h-10 rounded-full bg-navy-800 flex items-center justify-center">
               <span class="text-gold-400 font-semibold">管</span>
             </div>
@@ -112,10 +158,10 @@
         </div>
       </header>
 
-      <main class="flex-1 p-8 overflow-auto">
+      <main class="flex-1 p-4 lg:p-8 overflow-auto">
         <!-- Filters -->
         <div class="bg-white rounded-2xl p-6 shadow-sm mb-6">
-          <div class="grid grid-cols-6 gap-4">
+          <div class="grid grid-cols-2 lg:grid-cols-6 gap-4">
             <div class="col-span-2">
               <input type="text" placeholder="取引ID・商品名で検索..." class="w-full px-4 py-2.5 rounded-xl border border-gray-200 focus:border-gold-500 focus:ring-2 focus:ring-gold-500/20 outline-none text-sm">
             </div>
@@ -142,128 +188,128 @@
         </div>
 
         <!-- Stats -->
-        <div class="grid grid-cols-5 gap-4 mb-6">
+        <div class="grid grid-cols-2 lg:grid-cols-5 gap-4 mb-6">
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-navy-800">1,847</div>
+            <div class="text-lg sm:text-2xl font-bold text-navy-800">1,847</div>
             <div class="text-sm text-navy-500">総取引数</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-blue-600">45</div>
+            <div class="text-lg sm:text-2xl font-bold text-blue-600">45</div>
             <div class="text-sm text-navy-500">入札中</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-yellow-600">23</div>
+            <div class="text-lg sm:text-2xl font-bold text-yellow-600">23</div>
             <div class="text-sm text-navy-500">支払い待ち</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-green-600">1,756</div>
+            <div class="text-lg sm:text-2xl font-bold text-green-600">1,756</div>
             <div class="text-sm text-navy-500">完了</div>
           </div>
           <div class="bg-white rounded-xl p-4 shadow-sm">
-            <div class="text-2xl font-bold text-gold-600">¥156.8M</div>
+            <div class="text-lg sm:text-2xl font-bold text-gold-600">¥156.8M</div>
             <div class="text-sm text-navy-500">総取引額</div>
           </div>
         </div>
 
         <!-- Table -->
-        <div class="bg-white rounded-2xl shadow-sm overflow-hidden">
+        <div class="bg-white rounded-2xl shadow-sm overflow-hidden overflow-x-auto">
           <table class="w-full">
             <thead class="bg-gray-50">
               <tr>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">取引ID</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">商品</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">出品者</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">落札者</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">金額</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">ステータス</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">日時</th>
-                <th class="text-left text-xs text-navy-500 font-medium px-6 py-4">操作</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">取引ID</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">商品</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">出品者</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">落札者</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">金額</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">ステータス</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">日時</th>
+                <th class="text-left text-xs text-navy-500 font-medium px-3 sm:px-6 py-4">操作</th>
               </tr>
             </thead>
             <tbody class="divide-y divide-gray-100">
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <span class="font-mono text-sm text-navy-600">#TXN-2024-001847</span>
                 </td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">ヴィトン ポルトフォイユ・ヴィクトリーヌ</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">山田 太郎</td>
                 <td class="px-6 py-4 text-sm text-navy-600">鈴木質店</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥68,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">支払い待ち</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800">支払い待ち</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/15 14:30</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <span class="font-mono text-sm text-navy-600">#TXN-2024-001846</span>
                 </td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">ロレックス デイトナ 116500LN</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">佐藤 花子</td>
                 <td class="px-6 py-4 text-sm text-navy-600">大黒屋 新宿店</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥3,850,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">発送待ち</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-blue-100 text-blue-800">発送待ち</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/15 12:15</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <span class="font-mono text-sm text-navy-600">#TXN-2024-001845</span>
                 </td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">エルメス バーキン25</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">田中 一郎</td>
                 <td class="px-6 py-4 text-sm text-navy-600">質セキネ</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥1,280,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/14 18:45</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <span class="font-mono text-sm text-navy-600">#TXN-2024-001844</span>
                 </td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">シャネル マトラッセ チェーンショルダー</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">鈴木 美咲</td>
                 <td class="px-6 py-4 text-sm text-navy-500">-</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥450,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-purple-100 text-purple-800">入札中</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-purple-100 text-purple-800">入札中</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/14 10:20</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <span class="font-mono text-sm text-navy-600">#TXN-2024-001843</span>
                 </td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">カルティエ ラブブレス</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">伊藤 健太</td>
                 <td class="px-6 py-4 text-sm text-navy-600">松坂屋質店</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥520,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800">キャンセル</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800">キャンセル</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/13 16:00</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
               <tr class="hover:bg-gray-50">
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <span class="font-mono text-sm text-navy-600">#TXN-2024-001842</span>
                 </td>
-                <td class="px-6 py-4">
+                <td class="px-3 sm:px-6 py-4">
                   <div class="font-medium text-navy-800 text-sm">パテックフィリップ ノーチラス</div>
                 </td>
                 <td class="px-6 py-4 text-sm text-navy-600">高橋 次郎</td>
                 <td class="px-6 py-4 text-sm text-navy-600">銀座質屋</td>
                 <td class="px-6 py-4 text-sm font-semibold text-navy-800">¥12,500,000</td>
-                <td class="px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
+                <td class="px-3 sm:px-6 py-4"><span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800">完了</span></td>
                 <td class="px-6 py-4 text-sm text-navy-500">2024/01/12 11:30</td>
-                <td class="px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
+                <td class="px-3 sm:px-6 py-4"><a href="transaction-detail.html" class="text-gold-600 hover:text-gold-700 text-sm font-medium">詳細</a></td>
               </tr>
             </tbody>
           </table>
@@ -282,5 +328,39 @@
       </main>
     </div>
   </div>
+  <script>
+    const sidebar = document.getElementById('sidebar');
+    const sidebarOverlay = document.getElementById('sidebar-overlay');
+    const sidebarToggle = document.getElementById('sidebar-toggle');
+    const sidebarClose = document.getElementById('sidebar-close');
+
+    function openSidebar() {
+      sidebar.classList.add('active');
+      sidebarOverlay.classList.add('active');
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeSidebar() {
+      sidebar.classList.remove('active');
+      sidebarOverlay.classList.remove('active');
+      document.body.style.overflow = '';
+    }
+
+    sidebarToggle.addEventListener('click', openSidebar);
+    sidebarClose.addEventListener('click', closeSidebar);
+    sidebarOverlay.addEventListener('click', closeSidebar);
+
+    sidebar.querySelectorAll('a').forEach(link => {
+      link.addEventListener('click', () => {
+        if (window.innerWidth < 1024) {
+          closeSidebar();
+        }
+      });
+    });
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'Escape') closeSidebar();
+    });
+  </script>
 </body>
 </html>
